Fixed gaps and padding

--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,9 @@ main {
 .perfume-details {
     background-color: var(--white);
     align-items: flex-start;
-    padding: 1.2rem;
+    padding: 1rem;
     justify-content: space-evenly;
-    gap: 1rem;
+    /* gap: 1rem; */
 }
 
 .cart-btn {
